fix: permanent dark mode

--- a/src/app.sass
+++ b/src/app.sass
@@ -27,7 +27,7 @@ $b-xlscreen: 1201px
     --hl-med: #403d52
     --hl-high: #524f67
 
-@media (prefers-color-scheme: light)
+@media (dark)
     :root
         --color-base: #faf4ed
         --color-surface: #fffaf3
